--- a/Report/ADDA ver1.tex
+++ b/Report/ADDA ver1.tex
@@ -1351,8 +1351,7 @@ end
 		\underline{可以看到，最佳迭代次数大概为150次，即只需要方法一所需时间的一半就能完成校正。}
 
 		\subsection{全部非理想因素叠加时的时钟校正}
-
-		下面我们在完整的15位ADC（1bit冗余），并考虑所有非理想因素情况下进行时钟校正，验证时钟校正的最终效果。采样率取$2^22$，非理想因素相应参数见3.3.6。timing skew方差大小为$\frac{0.05*1}{fs}$，迭代步长为$\frac{0.05*1}_{fs*10}$。
+		下面我们在完整的15位ADC（1bit冗余），并考虑所有非理想因素情况下进行时钟校正，验证时钟校正的最终效果。采样率取$2^22$，非理想因素相应参数见3.3.6。timing skew方差大小为$\frac{0.05*1}{fs}$，迭代步长为$\frac{0.05*1}{fs*10}$。
 
 		\subsubsection{方法一校正效果}
 
