--- a/Report/ADDA ver1.tex
+++ b/Report/ADDA ver1.tex
@@ -1186,7 +1186,7 @@ end
 			\mathbb{E}\left(x_i[k] x_{i+1}[k]\right)=R\left(t_{i, i+1}\right)
 		\end{equation}
 		
-		以四通道为例，求出$R\left(t_{1.2}\right)$,$R\left(t_{2,3}\right)$,$R\left(t_{3,4}\right)$和$$R\left(t_{4,1}\right)$$.
+		以四通道为例，求出$R\left(t_{1.2}\right)$,$R\left(t_{2,3}\right)$,$R\left(t_{3,4}\right)$和$R\left(t_{4,1}\right)$.
 		
 		理想采样时刻，有$t_{1,2}=t_{2,3}=t_{3,4}=t_{4,1}=T_s$，存在时钟偏差时，考虑偏差相对采样周期是极小量，由泰勒展开易得：
 		
@@ -1200,7 +1200,7 @@ end
 		
 		上式表面，$R(T_s)$可以通过对四个相关函数求平均来逼近。
 		
-		我们再考虑，自相关函数在数个Ts范围内近似线性，则可以认为，$R(k T_s)≈kR(T_s)$。下图为四通道TI-ADC的采样时刻图，白色表示理想采样时刻，红色表示实际采样时刻，采样时刻可以通过自相关函数来提取。
+		我们再考虑，自相关函数在数个Ts范围内近似线性，则可以认为，$R(k T_s)\approx R(T_s)$。下图为四通道TI-ADC的采样时刻图，白色表示理想采样时刻，红色表示实际采样时刻，采样时刻可以通过自相关函数来提取。
 		
 		\begin{figure}[H]
 			\centering
@@ -1351,7 +1351,7 @@ end
 		\underline{可以看到，最佳迭代次数大概为150次，即只需要方法一所需时间的一半就能完成校正。}
 
 		\subsection{全部非理想因素叠加时的时钟校正}
-		下面我们在完整的15位ADC（1bit冗余），并考虑所有非理想因素情况下进行时钟校正，验证时钟校正的最终效果。采样率取$2^22$，非理想因素相应参数见3.3.6。timing skew方差大小为$\frac{0.05*1}{fs}$，迭代步长为$\frac{0.05*1}{fs*10}$。
+		下面我们在完整的15位ADC（1bit冗余），并考虑所有非理想因素情况下进行时钟校正，验证时钟校正的最终效果。采样率取$2^{22}$，非理想因素相应参数见3.3.6。timing skew方差大小为$\frac{0.05*1}{fs}$，迭代步长为$\frac{0.05*1}{fs*10}$。
 
 		\subsubsection{方法一校正效果}
 
@@ -1453,7 +1453,7 @@ end
 			\item 将矩阵的维度设置错误，从而导致电脑内存不足，无法进行特别多的采样，导致误差很大。之后改正了维度错误，正常运行。
 			
 			\item 计算自相关函数的硬件开销过大，使用绝对值差函数进行替换：
-			由于计算自相关函数需要对庞大的样本进行乘积，硬件开销过于巨大，我们推测实际布置电路时不具备可行性，因此考虑其替代方案。文献［8］指出，均值绝对差（MAD，Mean Absolute Deviation）可用于替代相关性计算，在一般情况下很难证明二者的等价性，此处以正弦输入信号 $V(t)=\cos (\omega t) V(t)$ 为例进行分析。
+			由于计算自相关函数需要对庞大的样本进行乘积，硬件开销过于巨大，我们推测实际布置电路时不具备可行性，因此考虑其替代方案。文献\cite{ref3}指出，均值绝对差（MAD，Mean Absolute Deviation）可用于替代相关性计算，在一般情况下很难证明二者的等价性，此处以正弦输入信号 $V(t)=\cos (\omega t) V(t)$ 为例进行分析。
 			
 			设采样间隔为 $\tau$ ，则两采样值间的 MAD 可表示为：
 			
